--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "prettier": "^1.14.2"
   },
   "repository": {
