--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "gatsby-plugin-google-analytics": "^2.0.8",
+    "gatsby-plugin-google-gtag": "^1.0.8",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sitemap": "^2.0.3",
     "prettier": "^1.14.2"
